--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
         "@react-three/drei": "^10.7.7",
         "@react-three/fiber": "^9.5.0",
         "clsx": "^2.1.1",
+        "critters": "^0.0.23",
         "framer-motion": "^12.34.0",
         "gsap": "^3.14.2",
         "lenis": "^1.3.17",
