Fix Vercel deployment: update image config to use remotePatterns and add required sizes

--- a/vercel.json
+++ b/vercel.json
@@ -73,13 +73,47 @@
         }
     },
     "images": {
-        "domains": [
-            "starrynight-images.s3.amazonaws.com",
-            "res.cloudinary.com"
+        "remotePatterns": [
+            {
+                "protocol": "https",
+                "hostname": "starrynight-images.s3.amazonaws.com"
+            },
+            {
+                "protocol": "https",
+                "hostname": "res.cloudinary.com"
+            },
+            {
+                "protocol": "https",
+                "hostname": "d2w9rnfcy7mm78.cloudfront.net"
+            },
+            {
+                "protocol": "https",
+                "hostname": "images.unsplash.com"
+            }
         ],
         "formats": [
             "image/avif",
             "image/webp"
+        ],
+        "sizes": [
+            16,
+            32,
+            48,
+            64,
+            96,
+            128,
+            256,
+            384
+        ],
+        "deviceSizes": [
+            640,
+            750,
+            828,
+            1080,
+            1200,
+            1920,
+            2048,
+            3840
         ],
         "minimumCacheTTL": 60
     }
